Bugfix: Fixes #28, Overlapping text in GtkComboBox widgets

--- a/themes/luna/blue/gtk-3.0/controls/combobox.scss
+++ b/themes/luna/blue/gtk-3.0/controls/combobox.scss
@@ -23,6 +23,7 @@ combobox
         margin: 1px;
         min-height: 18px;
         min-width: 15px;
+        padding-right: 18px;
         
         
         &:hover
@@ -45,5 +46,11 @@ combobox
     {
         border-width: 0px;
         padding-top: 2px;
+        
+        
+        & + button
+        {
+            padding-right: 0px;
+        }
     }
 }
